# DRF-SSO

./: .gitignore  MANIFEST.in  README.md  TODO  providers.py  pyproject.toml  requirements.txt  settings.py  setup.py
back/: .gitignore  Dockerfile  build_and_run.sh  db.sqlite3  manage.py  requirements.txt
back/cas_auth/: asgi.py  cas.py  settings.py  urls.py  views.py  wsgi.py
back/core/: admin.py  models.py  urls.py  views.py
back/core/migrations/: 0001_initial.py  0002_customgroup_customuser.py
drf_sso/: settings.py  views.py
drf_sso/providers/: __init__.py  auth_provider.py  cas_provider.py  oauth_provider.py  oidc_provider.py  saml_provider.py  user_population.py
drf_sso/providers/oauth/: oauth.py
front/: pnpm-lock.yaml
front/src/: main.js
handover/: handover.py
oauth/: oauth.py
odic/: __init__.py  odic.py
oidc/: oidc.py
providers/: __init__.py  auth_provider.py  saml_provider.py
samlsp/: __init__.py  config.py  request.py  response.py  saml.py  test.py  xmlsign_utils.py
samlsp/conf/: config.json  idp_metadata.xml
samples/: config_sample.json  login_route_sample.json
test/: __init__.py  metadata.xml  settings.py
test/authnreq/: authreq.html  authreq.xml  authreq_signed.xml
test/autoidp/: authreq.xml  authreq_signed.xml  link.url
test/cas/: cas_server.py  mock_server.py  providers.py
test/oauth/: login_url.py  mock_server.py  providers.py
test/odic/: mock_server.py  providers.py
test/oidc/: mock_server.py  providers.py
test/saml/: django_provider_routes.py  metadata_gen.py  mock_server.py  providers.py  req.py  sp_test.py
(+18 files in other folders)
